# tech-dej-sii

./: CMakeLists.txt  main.c
conquerWorld/: CMakeLists.txt  conquerWorld.c  conquerWorld.h  myMemory.c  myMemory.h
tests/: CMakeLists.txt  main.c  test.c
